# aqo

./: README.md  pyproject.toml
aqo/: cli.py  config.py  db.py  llm.py  server.py
example/: mysql_test.toml
ui/: .eslintrc.cjs  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/src/: App.tsx
ui/src/components/: CopyButton.tsx  DBInfo.tsx  Header.tsx  QueryResultTable.tsx
ui/src/lib/: api.ts  store.ts  utils.ts
ui/src/pages/: History.tsx  Optimize.tsx  Query.tsx  Schema.tsx
